--- a/Code/Feedback/web-feedback-system/WebContent/view/theme.html
+++ b/Code/Feedback/web-feedback-system/WebContent/view/theme.html
@@ -10,14 +10,13 @@
 <link rel="stylesheet" href="resource/css/theme_customize.css">
 </head>
 <body>
-	<div class="container-fluid">
-
+	<div class="container">
 		<!-- menu top -->
 		<nav
 			class="navbar navbar-inverse navbar-fixed-top custom_navbar_color">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<div class="navbar-header">
 							<img
 								src="http://thumbs.dreamstime.com/x/job-search-3d-icon-16095671.jpg"
@@ -26,7 +25,7 @@
 								SYSTEM</a>
 						</div>
 					</div>
-					<div class="col-sm-8">
+					<div class="col-md-8">
 						<div>
 							<ul class="nav navbar-nav  navbar-right">
 								<li><a href="#">Home</a></li>
