--- a/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -22,8 +22,16 @@
 	background-color: #ff0000;
 }
 
+.custom_hiden {
+    display: none;
+}
+
 .custom_font_bold
 {
 	font-weight: bold;	
 	
+}
+
+pre {
+    white-space: pre-wrap;
 }
