--- a/Code/Feedback/web-feedback-system/WebContent/view/theme.html
+++ b/Code/Feedback/web-feedback-system/WebContent/view/theme.html
@@ -4,10 +4,11 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Web theme</title>
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="resource/bootstrap/css/bootstrap.min.css">
-<script src="resource/lib/jquery-2.1.4.min.js"></script>
-<script src="resource/bootstrap/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="resource/css/theme_customize.css">
+<link rel="stylesheet"
+	href="view/resource/bootstrap/css/bootstrap.min.css">
+<script src="view/resource/lib/jquery-2.1.4.min.js"></script>
+<script src="view/resource/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="view/resource/css/theme_customize.css">
 </head>
 <body>
 	<div class="container">
@@ -25,14 +26,20 @@
 								SYSTEM</a>
 						</div>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-7">
 						<div>
 							<ul class="nav navbar-nav  navbar-right">
 								<li><a href="#">Home</a></li>
-								<li><a href="#"><span class="glyphicon glyphicon-user"></span>
-										Xin chào, HIhIhi</a></li>
-								<li><a href="#"><span
-										class="glyphicon glyphicon-log-in"></span> Thoát</a></li>
+								<li class="dropdown"><a href="#" class="dropdown-toggle"
+									data-toggle="dropdown"> <span
+										class="glyphicon glyphicon-user"></span> Xin chào, ABC<span
+										class="caret"></span>
+								</a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Thay đổi mật khẩu</a></li>
+										<li><a href="#"><span
+												class="glyphicon glyphicon-log-in"></span> Đăng xuất</a></li>
+									</ul></li>
 							</ul>
 						</div>
 					</div>
@@ -54,9 +61,9 @@
 						</div>
 						<br>
 						<div>
-
 							<ul class="nav nav-pills nav-stacked custom_font_bold">
-								<li class><a href="#"><span
+								<li class><a
+									href="#"><span
 										class="glyphicon glyphicon-thumbs-up"></span> CÔNG VIỆC MỚI
 										NHẤT</a></li>
 								<li class><a href="#"><span
@@ -64,8 +71,7 @@
 										TÂM</a></li>
 								<li class><a href="#"><span
 										class="glyphicon glyphicon-thumbs-up"></span> THÔNG BÁO</a></li>
-								<li class><a href="#"><span
-										class="glyphicon glyphicon-cog"></span> THIẾT LẬP HỆ THỐNG</a></li>
+
 								<li class><a href="#"><span
 										class="glyphicon glyphicon-list-alt"></span> XEM HỒ SƠ CỦA BẠN</a></li>
 								<li class><a href="#"><span
@@ -77,17 +83,28 @@
 					</div>
 				</div>
 				<div class="col-md-9 custom_background_color">
-					<br>
-					<div class="container-fluid">
-						<div class="panel panel-default">
-							<div class="panel-heading">THÔNG TIN CÁ NHÂN</div>
-							<div class="panel-body">BLA BLA</div>
+					<br>						
+					<div>
+						<div class="panel panel-primary">
+							<div class="panel-heading">NỘI DUNG</div>
+							<div class="panel-body">
+								BALABLAALBLABL
+							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
 	</div>
+	</div>
+	</div>
+
+	</div>
 </body>
 </html>
+
+
+
+
+
+
