--- a/Code/Feedback/web-feedback-system/WebContent/view/theme.html
+++ b/Code/Feedback/web-feedback-system/WebContent/view/theme.html
@@ -62,8 +62,7 @@
 						<br>
 						<div>
 							<ul class="nav nav-pills nav-stacked custom_font_bold">
-								<li class><a
-									href="#"><span
+								<li class><a href="#"><span
 										class="glyphicon glyphicon-thumbs-up"></span> CÔNG VIỆC MỚI
 										NHẤT</a></li>
 								<li class><a href="#"><span
@@ -83,8 +82,7 @@
 					</div>
 				</div>
 				<div class="col-md-9 custom_background_color">
-					<br>											
-					<br>
+					<br> <br>
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a id="see-more" class="btn btn-link"><b>Ruby on Rails
@@ -123,6 +121,7 @@
 									
 									
 									
+										
 										
 										
 										
@@ -190,9 +189,8 @@ We are not only focus on works, but try to improve our employees by continuously
 						<div class="panel-footer">
 							<label>Bạn thấy công việc này có phù hợp với bạn không?</label> <a
 								href="#" class="btn btn-default glyphicon glyphicon-thumbs-up"
-								data-toggle="tooltip" title="Việc này phù hợp với tôi!"></a>
-							<a href="#"
-								class="btn btn-default glyphicon glyphicon-thumbs-down"
+								data-toggle="tooltip" title="Việc này phù hợp với tôi!"></a> <a
+								href="#" class="btn btn-default glyphicon glyphicon-thumbs-down"
 								data-toggle="tooltip" title="Việc này không hợp, bỏ đi!"
 								style="margin-left: 8px; margin-right: 8px;"></a>
 						</div>
