--- a/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -15,40 +15,6 @@
   animation: spin 2s infinite linear;
 }
 
-@-moz-keyframes spin {
-  0% {
-    -moz-transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(359deg);
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-  }
-}
-@-o-keyframes spin {
-  0% {
-    -o-transform: rotate(0deg);
-  }
-  100% {
-    -o-transform: rotate(359deg);
-  }
-}
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
 
 .custom_background_color {
 	background-color: #f7f7f7;
@@ -74,11 +40,18 @@
 	
 }
 
-pre {
-    white-space: pre-wrap;
-}
 
 .custom_margin
 {
 	margin-right: 10px;
+}
+
+.custom_margin_center
+{
+	margin: auto;
+}
+
+.custom_margin_left
+{
+	margin-left: 3px;	
 }
