--- a/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Code/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -15,6 +15,13 @@
   animation: spin 2s infinite linear;
 }
 
+pre {
+    white-space: pre-wrap;       /* CSS 3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 
 .custom_background_color {
 	background-color: #f7f7f7;
