--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -42,9 +42,10 @@ pre {
 }
 
 .custom_font_bold
-{
-	font-weight: bold;	
-	
+{		
+	font-weight:lighter;
+	font-family: sans-serif;
+	font-size: 16;
 }
 
 
