--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -8,11 +8,35 @@
 	color: white;
 }
 
-.gly-spin {
-  -webkit-animation: spin 2s infinite linear;
-  -moz-animation: spin 2s infinite linear;
-  -o-animation: spin 2s infinite linear;
-  animation: spin 2s infinite linear;
+.mm{
+    border: 8px solid #FFF;
+  border-top-color: red;
+  border-left-color: blue;
+  width: 20px;
+  height: 20px;
+  opacity: 0.8;
+  overflow:hidden;
+  border-radius: 50%;
+    -webkit-animation: mm 0.7s linear infinite; /* Chrome, Safari, Opera */
+    animation: mm 0.7s linear infinite;
+}
+
+
+.flip-container{overflow:hidden}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes mm{
+    from {left: 0px;}
+    to {left: 2000px;}
+}
+
+@keyframes mm{
+    from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 pre {
