--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/menu.css
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/menu.css
@@ -74,3 +74,21 @@ li.dropdown{
     opacity:0.8; 
     background:lightgrey;
 }
+@media (max-width: 2000px) {
+    #navbar-header-mobile {
+        float: none;
+    }
+    #toggle-mobile-button {
+        display: block;
+       
+    }
+   .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+	}
+    .collapse.in{
+  		display:block !important;
+	}
+}
