--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/theme_customize.css
@@ -1,7 +1,10 @@
 .custom_navbar_color {
 	color: #ffffff;
-	background-color: #115D9D;
-	font-weight: bold;
+	background-color: #115D9D;	
+}
+
+.custom_menu_color{
+	background-color:#115D9D;
 }
 
 body{
