add scrollbar of left-menu-toggle

--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/menu.css
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/view/resource/css/menu.css
@@ -1,7 +1,8 @@
 #navbar-small{
 	size: auto;
 	padding-left: 20px;
-	padding-right: 50px
+	padding-right: 50px;
+	padding-bottom:20px;
 }
 .toggle-link{
 	font-size: x-large;
@@ -26,17 +27,19 @@
 .left-menu-toggle{
 	position: fixed;
 	z-index: 999;
-	top: 150px;
+	top: 120px;
 	left: -240px;
 	width: 220px;
 	height: 500px;
 	background-color: white;
 	transition:all .6s ease-in-out;
     -webkit-transition:all .6s ease-in-out;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
     box-shadow: 10px 10px 5px #888888;
+    overflow-y:auto;
+    -webkit-transform:rotate(-1.5deg);
     
 }
 .left-menu-collapsed{
@@ -52,9 +55,6 @@ li.dropdown{
 	right: 0px;
 	position: absolute;
 	}
-.nav-large .nav-small{
-	top:0px;
-}
 .container{
 	display:block;
 }
@@ -77,6 +77,7 @@ li.dropdown{
 @media (max-width: 2000px) {
     #navbar-header-mobile {
         float: none;
+        width: 100%;
     }
     #toggle-mobile-button {
         display: block;
